// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`stegvisning - AFP - født mellom 1954-1962 uten vedtak om alderspensjon > rendrer slik den skal når afp er oppgitt 1`] = `
<DocumentFragment>
  <section
    class="_section_67454f _section__largePadding_67454f _section__marginBotton_67454f"
    data-testid="afp-overganskull"
  >
    <form>
      <h2
        class="navds-heading navds-heading--medium navds-typo--spacing"
      >
        stegvisning.afp.title
      </h2>
      <p
        class="navds-body-long navds-body-long--large"
      >
        stegvisning.afp.ingress
      </p>
      <div
        class="navds-read-more navds-read-more--medium _readmoreOffentlig_10a2c6"
        data-volume="low"
      >
        <button
          aria-expanded="false"
          class="navds-read-more__button navds-body-short"
          data-state="closed"
          data-testid="readmore"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="navds-read-more__expand-icon"
            fill="none"
            focusable="false"
            height="1em"
            role="img"
            viewBox="0 0 24 24"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              clip-rule="evenodd"
              d="M5.97 9.47a.75.75 0 0 1 1.06 0L12 14.44l4.97-4.97a.75.75 0 1 1 1.06 1.06l-5.5 5.5a.75.75 0 0 1-1.06 0l-5.5-5.5a.75.75 0 0 1 0-1.06"
              fill="currentColor"
              fill-rule="evenodd"
            />
          </svg>
          <span>
            stegvisning.afpOvergangskull.readmore_offentlig_title
          </span>
        </button>
        <div
          aria-hidden="true"
          class="navds-read-more__content navds-read-more__content--closed navds-body-long navds-body-long--medium"
          data-state="closed"
        >
          stegvisning.afp.readmore_offentlig_list_title
          <ul
            class="_list_10a2c6"
          >
            <li>
              stegvisning.afpOvergangskull.readmore_offentlig_list_item1
            </li>
            <li>
              stegvisning.afpOvergangskull.readmore_offentlig_list_item2
            </li>
            <li>
              stegvisning.afpOvergangskull.readmore_offentlig_list_item3
            </li>
          </ul>
          stegvisning.afpOvergangskull.readmore_offentlig_ingress
        </div>
      </div>
      <div
        class="navds-read-more navds-read-more--medium _wrapper_11f63f _readmorePrivat_10a2c6"
        data-volume="low"
      >
        <button
          aria-expanded="false"
          class="navds-read-more__button navds-body-short"
          data-state="closed"
          data-testid="om_livsvarig_AFP_i_privat_sektor"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="navds-read-more__expand-icon"
            fill="none"
            focusable="false"
            height="1em"
            role="img"
            viewBox="0 0 24 24"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              clip-rule="evenodd"
              d="M5.97 9.47a.75.75 0 0 1 1.06 0L12 14.44l4.97-4.97a.75.75 0 1 1 1.06 1.06l-5.5 5.5a.75.75 0 0 1-1.06 0l-5.5-5.5a.75.75 0 0 1 0-1.06"
              fill="currentColor"
              fill-rule="evenodd"
            />
          </svg>
          <span>
            Om livsvarig AFP i privat sektor
          </span>
        </button>
        <div
          aria-hidden="true"
          class="navds-read-more__content navds-read-more__content--closed navds-body-long navds-body-long--medium"
          data-state="closed"
        >
          <p>
            Lorem
          </p>
        </div>
      </div>
      <fieldset
        aria-required="true"
        class="_radiogroup_10a2c6 navds-radio-group navds-radio-group--medium navds-fieldset navds-fieldset--medium"
        role="radiogroup"
      >
        <legend
          class="navds-fieldset__legend navds-label"
        >
          stegvisning.afp.radio_label
        </legend>
        <div
          class="navds-radio-buttons"
        >
          <div
            class="navds-radio navds-radio--medium"
          >
            <input
              aria-labelledby="«rl»"
              class="navds-radio__input"
              id="radio-«rk»"
              name="afp"
              type="radio"
              value="ja_offentlig"
            />
            <label
              class="navds-radio__label"
              for="radio-«rk»"
            >
              <span
                class="navds-radio__content"
              >
                <span
                  aria-hidden="true"
                  class="navds-body-short navds-body-short--medium"
                  id="«rl»"
                >
                  stegvisning.afp.radio_ja_offentlig
                </span>
              </span>
            </label>
          </div>
          <div
            class="navds-radio navds-radio--medium"
          >
            <input
              aria-labelledby="«ro»"
              class="navds-radio__input"
              id="radio-«rn»"
              name="afp"
              type="radio"
              value="ja_privat"
            />
            <label
              class="navds-radio__label"
              for="radio-«rn»"
            >
              <span
                class="navds-radio__content"
              >
                <span
                  aria-hidden="true"
                  class="navds-body-short navds-body-short--medium"
                  id="«ro»"
                >
                  stegvisning.afp.radio_ja_privat
                </span>
              </span>
            </label>
          </div>
          <div
            class="navds-radio navds-radio--medium"
          >
            <input
              aria-labelledby="«rr»"
              checked=""
              class="navds-radio__input"
              id="radio-«rq»"
              name="afp"
              type="radio"
              value="nei"
            />
            <label
              class="navds-radio__label"
              for="radio-«rq»"
            >
              <span
                class="navds-radio__content"
              >
                <span
                  aria-hidden="true"
                  class="navds-body-short navds-body-short--medium"
                  id="«rr»"
                >
                  stegvisning.afp.radio_nei
                </span>
              </span>
            </label>
          </div>
          <div
            class="navds-radio navds-radio--medium"
          >
            <input
              aria-labelledby="«ru»"
              class="navds-radio__input"
              id="radio-«rt»"
              name="afp"
              type="radio"
              value="vet_ikke"
            />
            <label
              class="navds-radio__label"
              for="radio-«rt»"
            >
              <span
                class="navds-radio__content"
              >
                <span
                  aria-hidden="true"
                  class="navds-body-short navds-body-short--medium"
                  id="«ru»"
                >
                  stegvisning.afp.radio_vet_ikke
                </span>
              </span>
            </label>
          </div>
        </div>
        <div
          aria-live="polite"
          aria-relevant="additions removals"
          class="navds-fieldset__error"
          id="fieldset-error-«rj»"
        />
      </fieldset>
      <button
        class="_button_10a2c6 navds-button navds-button--primary navds-button--medium"
        type="submit"
      >
        <span
          class="navds-label"
        >
          stegvisning.neste
        </span>
      </button>
      <button
        class="_button_10a2c6 navds-button navds-button--secondary navds-button--medium"
        type="button"
      >
        <span
          class="navds-label"
        >
          stegvisning.tilbake
        </span>
      </button>
      <button
        class="_button_10a2c6 navds-button navds-button--tertiary navds-button--medium"
        type="button"
      >
        <span
          class="navds-label"
        >
          stegvisning.avbryt
        </span>
      </button>
    </form>
  </section>
</DocumentFragment>
`;

exports[`stegvisning - AFP - født mellom 1954-1962 uten vedtak om alderspensjon > rendrer slik den skal når afp og skalBeregneAfp ikke er oppgitt 1`] = `
<DocumentFragment>
  <section
    class="_section_67454f _section__largePadding_67454f _section__marginBotton_67454f"
    data-testid="afp-overganskull"
  >
    <form>
      <h2
        class="navds-heading navds-heading--medium navds-typo--spacing"
      >
        stegvisning.afp.title
      </h2>
      <p
        class="navds-body-long navds-body-long--large"
      >
        stegvisning.afp.ingress
      </p>
      <div
        class="navds-read-more navds-read-more--medium _readmoreOffentlig_10a2c6"
        data-volume="low"
      >
        <button
          aria-expanded="false"
          class="navds-read-more__button navds-body-short"
          data-state="closed"
          data-testid="readmore"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="navds-read-more__expand-icon"
            fill="none"
            focusable="false"
            height="1em"
            role="img"
            viewBox="0 0 24 24"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              clip-rule="evenodd"
              d="M5.97 9.47a.75.75 0 0 1 1.06 0L12 14.44l4.97-4.97a.75.75 0 1 1 1.06 1.06l-5.5 5.5a.75.75 0 0 1-1.06 0l-5.5-5.5a.75.75 0 0 1 0-1.06"
              fill="currentColor"
              fill-rule="evenodd"
            />
          </svg>
          <span>
            stegvisning.afpOvergangskull.readmore_offentlig_title
          </span>
        </button>
        <div
          aria-hidden="true"
          class="navds-read-more__content navds-read-more__content--closed navds-body-long navds-body-long--medium"
          data-state="closed"
        >
          stegvisning.afp.readmore_offentlig_list_title
          <ul
            class="_list_10a2c6"
          >
            <li>
              stegvisning.afpOvergangskull.readmore_offentlig_list_item1
            </li>
            <li>
              stegvisning.afpOvergangskull.readmore_offentlig_list_item2
            </li>
            <li>
              stegvisning.afpOvergangskull.readmore_offentlig_list_item3
            </li>
          </ul>
          stegvisning.afpOvergangskull.readmore_offentlig_ingress
        </div>
      </div>
      <div
        class="navds-read-more navds-read-more--medium _wrapper_11f63f _readmorePrivat_10a2c6"
        data-volume="low"
      >
        <button
          aria-expanded="false"
          class="navds-read-more__button navds-body-short"
          data-state="closed"
          data-testid="om_livsvarig_AFP_i_privat_sektor"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="navds-read-more__expand-icon"
            fill="none"
            focusable="false"
            height="1em"
            role="img"
            viewBox="0 0 24 24"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              clip-rule="evenodd"
              d="M5.97 9.47a.75.75 0 0 1 1.06 0L12 14.44l4.97-4.97a.75.75 0 1 1 1.06 1.06l-5.5 5.5a.75.75 0 0 1-1.06 0l-5.5-5.5a.75.75 0 0 1 0-1.06"
              fill="currentColor"
              fill-rule="evenodd"
            />
          </svg>
          <span>
            Om livsvarig AFP i privat sektor
          </span>
        </button>
        <div
          aria-hidden="true"
          class="navds-read-more__content navds-read-more__content--closed navds-body-long navds-body-long--medium"
          data-state="closed"
        >
          <p>
            Lorem
          </p>
        </div>
      </div>
      <fieldset
        aria-required="true"
        class="_radiogroup_10a2c6 navds-radio-group navds-radio-group--medium navds-fieldset navds-fieldset--medium"
        role="radiogroup"
      >
        <legend
          class="navds-fieldset__legend navds-label"
        >
          stegvisning.afp.radio_label
        </legend>
        <div
          class="navds-radio-buttons"
        >
          <div
            class="navds-radio navds-radio--medium"
          >
            <input
              aria-labelledby="«r5»"
              class="navds-radio__input"
              id="radio-«r4»"
              name="afp"
              type="radio"
              value="ja_offentlig"
            />
            <label
              class="navds-radio__label"
              for="radio-«r4»"
            >
              <span
                class="navds-radio__content"
              >
                <span
                  aria-hidden="true"
                  class="navds-body-short navds-body-short--medium"
                  id="«r5»"
                >
                  stegvisning.afp.radio_ja_offentlig
                </span>
              </span>
            </label>
          </div>
          <div
            class="navds-radio navds-radio--medium"
          >
            <input
              aria-labelledby="«r8»"
              class="navds-radio__input"
              id="radio-«r7»"
              name="afp"
              type="radio"
              value="ja_privat"
            />
            <label
              class="navds-radio__label"
              for="radio-«r7»"
            >
              <span
                class="navds-radio__content"
              >
                <span
                  aria-hidden="true"
                  class="navds-body-short navds-body-short--medium"
                  id="«r8»"
                >
                  stegvisning.afp.radio_ja_privat
                </span>
              </span>
            </label>
          </div>
          <div
            class="navds-radio navds-radio--medium"
          >
            <input
              aria-labelledby="«rb»"
              class="navds-radio__input"
              id="radio-«ra»"
              name="afp"
              type="radio"
              value="nei"
            />
            <label
              class="navds-radio__label"
              for="radio-«ra»"
            >
              <span
                class="navds-radio__content"
              >
                <span
                  aria-hidden="true"
                  class="navds-body-short navds-body-short--medium"
                  id="«rb»"
                >
                  stegvisning.afp.radio_nei
                </span>
              </span>
            </label>
          </div>
          <div
            class="navds-radio navds-radio--medium"
          >
            <input
              aria-labelledby="«re»"
              class="navds-radio__input"
              id="radio-«rd»"
              name="afp"
              type="radio"
              value="vet_ikke"
            />
            <label
              class="navds-radio__label"
              for="radio-«rd»"
            >
              <span
                class="navds-radio__content"
              >
                <span
                  aria-hidden="true"
                  class="navds-body-short navds-body-short--medium"
                  id="«re»"
                >
                  stegvisning.afp.radio_vet_ikke
                </span>
              </span>
            </label>
          </div>
        </div>
        <div
          aria-live="polite"
          aria-relevant="additions removals"
          class="navds-fieldset__error"
          id="fieldset-error-«r3»"
        />
      </fieldset>
      <button
        class="_button_10a2c6 navds-button navds-button--primary navds-button--medium"
        type="submit"
      >
        <span
          class="navds-label"
        >
          stegvisning.neste
        </span>
      </button>
      <button
        class="_button_10a2c6 navds-button navds-button--secondary navds-button--medium"
        type="button"
      >
        <span
          class="navds-label"
        >
          stegvisning.tilbake
        </span>
      </button>
      <button
        class="_button_10a2c6 navds-button navds-button--tertiary navds-button--medium"
        type="button"
      >
        <span
          class="navds-label"
        >
          stegvisning.avbryt
        </span>
      </button>
    </form>
  </section>
</DocumentFragment>
`;

exports[`stegvisning - AFP - født mellom 1954-1962 uten vedtak om alderspensjon > rendrer slik den skal når afp og skalBeregneAfp ikke er oppgitt 2`] = `
<DocumentFragment>
  <section
    class="_section_67454f _section__largePadding_67454f _section__marginBotton_67454f"
    data-testid="afp-overganskull"
  >
    <form>
      <h2
        class="navds-heading navds-heading--medium navds-typo--spacing"
      >
        stegvisning.afp.title
      </h2>
      <p
        class="navds-body-long navds-body-long--large"
      >
        stegvisning.afp.ingress
      </p>
      <div
        class="navds-read-more navds-read-more--medium _readmoreOffentlig_10a2c6"
        data-volume="low"
      >
        <button
          aria-expanded="false"
          class="navds-read-more__button navds-body-short"
          data-state="closed"
          data-testid="readmore"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="navds-read-more__expand-icon"
            fill="none"
            focusable="false"
            height="1em"
            role="img"
            viewBox="0 0 24 24"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              clip-rule="evenodd"
              d="M5.97 9.47a.75.75 0 0 1 1.06 0L12 14.44l4.97-4.97a.75.75 0 1 1 1.06 1.06l-5.5 5.5a.75.75 0 0 1-1.06 0l-5.5-5.5a.75.75 0 0 1 0-1.06"
              fill="currentColor"
              fill-rule="evenodd"
            />
          </svg>
          <span>
            stegvisning.afpOvergangskull.readmore_offentlig_title
          </span>
        </button>
        <div
          aria-hidden="true"
          class="navds-read-more__content navds-read-more__content--closed navds-body-long navds-body-long--medium"
          data-state="closed"
        >
          stegvisning.afp.readmore_offentlig_list_title
          <ul
            class="_list_10a2c6"
          >
            <li>
              stegvisning.afpOvergangskull.readmore_offentlig_list_item1
            </li>
            <li>
              stegvisning.afpOvergangskull.readmore_offentlig_list_item2
            </li>
            <li>
              stegvisning.afpOvergangskull.readmore_offentlig_list_item3
            </li>
          </ul>
          stegvisning.afpOvergangskull.readmore_offentlig_ingress
        </div>
      </div>
      <div
        class="navds-read-more navds-read-more--medium _wrapper_11f63f _readmorePrivat_10a2c6"
        data-volume="low"
      >
        <button
          aria-expanded="false"
          class="navds-read-more__button navds-body-short"
          data-state="closed"
          data-testid="om_livsvarig_AFP_i_privat_sektor"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="navds-read-more__expand-icon"
            fill="none"
            focusable="false"
            height="1em"
            role="img"
            viewBox="0 0 24 24"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              clip-rule="evenodd"
              d="M5.97 9.47a.75.75 0 0 1 1.06 0L12 14.44l4.97-4.97a.75.75 0 1 1 1.06 1.06l-5.5 5.5a.75.75 0 0 1-1.06 0l-5.5-5.5a.75.75 0 0 1 0-1.06"
              fill="currentColor"
              fill-rule="evenodd"
            />
          </svg>
          <span>
            Om livsvarig AFP i privat sektor
          </span>
        </button>
        <div
          aria-hidden="true"
          class="navds-read-more__content navds-read-more__content--closed navds-body-long navds-body-long--medium"
          data-state="closed"
        >
          <p>
            Lorem
          </p>
        </div>
      </div>
      <fieldset
        aria-required="true"
        class="_radiogroup_10a2c6 navds-radio-group navds-radio-group--medium navds-fieldset navds-fieldset--medium"
        role="radiogroup"
      >
        <legend
          class="navds-fieldset__legend navds-label"
        >
          stegvisning.afp.radio_label
        </legend>
        <div
          class="navds-radio-buttons"
        >
          <div
            class="navds-radio navds-radio--medium"
          >
            <input
              aria-labelledby="«r5»"
              class="navds-radio__input"
              id="radio-«r4»"
              name="afp"
              type="radio"
              value="ja_offentlig"
            />
            <label
              class="navds-radio__label"
              for="radio-«r4»"
            >
              <span
                class="navds-radio__content"
              >
                <span
                  aria-hidden="true"
                  class="navds-body-short navds-body-short--medium"
                  id="«r5»"
                >
                  stegvisning.afp.radio_ja_offentlig
                </span>
              </span>
            </label>
          </div>
          <div
            class="navds-radio navds-radio--medium"
          >
            <input
              aria-labelledby="«r8»"
              class="navds-radio__input"
              id="radio-«r7»"
              name="afp"
              type="radio"
              value="ja_privat"
            />
            <label
              class="navds-radio__label"
              for="radio-«r7»"
            >
              <span
                class="navds-radio__content"
              >
                <span
                  aria-hidden="true"
                  class="navds-body-short navds-body-short--medium"
                  id="«r8»"
                >
                  stegvisning.afp.radio_ja_privat
                </span>
              </span>
            </label>
          </div>
          <div
            class="navds-radio navds-radio--medium"
          >
            <input
              aria-labelledby="«rb»"
              class="navds-radio__input"
              id="radio-«ra»"
              name="afp"
              type="radio"
              value="nei"
            />
            <label
              class="navds-radio__label"
              for="radio-«ra»"
            >
              <span
                class="navds-radio__content"
              >
                <span
                  aria-hidden="true"
                  class="navds-body-short navds-body-short--medium"
                  id="«rb»"
                >
                  stegvisning.afp.radio_nei
                </span>
              </span>
            </label>
          </div>
          <div
            class="navds-radio navds-radio--medium"
          >
            <input
              aria-labelledby="«re»"
              class="navds-radio__input"
              id="radio-«rd»"
              name="afp"
              type="radio"
              value="vet_ikke"
            />
            <label
              class="navds-radio__label"
              for="radio-«rd»"
            >
              <span
                class="navds-radio__content"
              >
                <span
                  aria-hidden="true"
                  class="navds-body-short navds-body-short--medium"
                  id="«re»"
                >
                  stegvisning.afp.radio_vet_ikke
                </span>
              </span>
            </label>
          </div>
        </div>
        <div
          aria-live="polite"
          aria-relevant="additions removals"
          class="navds-fieldset__error"
          id="fieldset-error-«r3»"
        />
      </fieldset>
      <button
        class="_button_10a2c6 navds-button navds-button--primary navds-button--medium"
        type="submit"
      >
        <span
          class="navds-label"
        >
          stegvisning.neste
        </span>
      </button>
      <button
        class="_button_10a2c6 navds-button navds-button--secondary navds-button--medium"
        type="button"
      >
        <span
          class="navds-label"
        >
          stegvisning.tilbake
        </span>
      </button>
      <button
        class="_button_10a2c6 navds-button navds-button--tertiary navds-button--medium"
        type="button"
      >
        <span
          class="navds-label"
        >
          stegvisning.avbryt
        </span>
      </button>
    </form>
  </section>
</DocumentFragment>
`;
